--- a/ppt1718_practica2_g06/ppt1718_practica2_g06.vcxproj.filters
+++ b/ppt1718_practica2_g06/ppt1718_practica2_g06.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Desktop\cliente46.c">
+    <ClCompile Include="cliente46.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\Desktop\protocol.h">
+    <ClInclude Include="protocol.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
