--- a/ppt1718_practica2_g06/ppt1718_practica2_g06.vcxproj.filters
+++ b/ppt1718_practica2_g06/ppt1718_practica2_g06.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="protocol.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cliente46.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
